# media-metadata-surgery

./: .gitignore  MANIFEST.in  Makefile  README.md  go.mod  go.sum  pyproject.toml  setup.py
.github/workflows/: publish.yml
cli/: main.go
core/: detect.go  output.go  types.go
core/audio/: audio.go
core/document/: document.go
core/image/: image.go
core/jpg/: exif.go
core/video/: video.go
surgery/: __main__.py
