[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surgery"
version = "0.1.2"
description = "Precision-focused offline CLI for viewing, editing, and stripping metadata from any media or document file"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
